--- a/style.css
+++ b/style.css
@@ -1,14 +1,10 @@
-#red, #green, #blue{
-width:100px;
-height:100px;
-margin:10px;
+.treangle, .sqwer{
+width:100%;
+height:100%;
+margin:20px auto;
+border:1px solid #000000;
+background: #c5c5c5;
+text-align:center;
+padding: 10px 0;
 }
-#red{
-background:red;
-}
-#green{
-background:green;
-}
-#blue{
-background:blue;
-}
+
